--- a/config/server-config.json
+++ b/config/server-config.json
@@ -19,5 +19,5 @@
   "mail_username": "458e9d219d836497158992d00dfd6db8",
   "mail_password": "6cbffd368e655b4104b293bed4d6d7ea",
 
-  "email_from": "david-d25@yandex.ru"
+  "email_from": "mashina.katherina@yandex.ru"
 }
